# STM32-learning

./: CMakeLists.txt  main.S  main.cpp
cmake/: arm_none_eabi.cmake
drivers/CMSIS/: CMakeLists.txt
drivers/CMSIS/DeviceSupport/ST/STM32F10x/: stm32f10x.h
firmwares/: 3_1.cpp  5050.cpp  ajnj.docx  dz2.cpp  dz3.cpp  hg.cpp  i2c.cpp  i2c_2.cpp  mur.cpp  z1.cpp  мигалка.cpp  разгон.cpp  уарт.cpp  уарт.docx  уарт_эхо.cpp  уарт_ярскость.cpp  шим.cpp  шим.docx
